# enigma

./: .gitignore  1  Jenkinsfile  LICENSE  README.md  __init__.py  circle.yml  enigmaM3_test.py  enigmaM4_test.py  enigma_app.py  enigma_test.py  pyproject.toml  reflector.py  requirements.txt  rotor.py  setup.cfg  setup.py
.github/workflows/: enigma_py310.yml  enigma_py311.yml  enigma_py312.yml  enigma_py313.yml  enigma_py37.yml  enigma_py38.yml  enigma_py39.yml
enigma/: __init__.py  plugboard.py  reflector.py  rotor.py  terminal_app.py
examples/: enigmaM3.py  enigmaM4.py
tests/: test_enigma3.py  test_rotor.py
