[tool.poetry]
name = "enigma"
version = "1.2.2"
description = "Enigma Machine Emulator for Python."
authors = ["Kristian Zarebski <krizar312@gmail.com>"]
license = "GPL-v3"
readme = "README.md"
keywords = ["enigma", "cipher", "encoding"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
enigma = 'enigma.terminal_app:main'
