[project]
name = "enigma"
version = "1.2.3"
description = "Enigma Machine Emulator for Python."
authors = [
    {name = "Kristian Zarębski",email = "krizar312@gmail.com"}
]
license = {text = "GPL-v3"}
readme = "README.md"
requires-python = ">=3.8,<3.14"
dependencies = [
]

[project.scripts]
enigma = 'enigma.terminal_app:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pytest = "^8.3.5"
bandit = "<1.8.3"
hypothesis = "<6.129.3"

